--- a/katrid/templates/bin/README
+++ b/katrid/templates/bin/README
@@ -1,3 +1,35 @@
 Thank you for purchasing the Katrid-Theme, the full Admin, Dashboard, CRM and ERP theme.
 
 For more information see the documentation/index.html.
+
+Credits:
+
+awesome-bootstrap-checkbox: https://github.com/flatlogic/awesome-bootstrap-checkbox
+bootstrap-datepicker: https://bootstrap-datepicker.readthedocs.io/en/latest/
+bootstrap-markddown: http://www.codingdrama.com/bootstrap-markdown/
+bootstrap-multiselect: https://github.com/davidstutz/bootstrap-multiselect
+bootstrap-touchspin: http://www.virtuosoft.eu/code/bootstrap-touchspin/
+chart.js: http://www.chartjs.org/
+chosen: https://harvesthq.github.io/chosen/
+ck-editor: http://ckeditor.com/
+code-mirror: https://codemirror.net/
+data-tables: https://datatables.net/
+easy-pie-chart: https://rendro.github.io/easy-pie-chart/
+flot: http://www.flotcharts.org/
+highlight: https://highlightjs.org/
+icheck: http://icheck.fronteed.com/
+ion.rangeslider: http://ionden.com/a/plugins/ion.rangeSlider/en.html
+jquery-ui: https://jqueryui.com/
+jquery.easing: http://gsgd.co.uk/sandbox/jquery/easing/
+jquery.knob: http://anthonyterrien.com/knob/
+jquery.maskedinput: https://plugins.jquery.com/maskedinput/
+moment: http://momentjs.com/
+ng-report: https://github.com/katrid/ngReport
+nouislider: http://refreshless.com/nouislider/
+pe-icon-7-stroke: http://themes-pixeden.com/font-demos/7-stroke/
+select2: https://select2.github.io/
+star-rating: http://plugins.krajee.com/star-rating
+summernote: http://summernote.org/
+sweetalert: http://t4t5.github.io/sweetalert/
+toastr: https://github.com/CodeSeven/toastr
+x-editable: https://vitalets.github.io/x-editable/
