--- a/katrid/templates/bin/README
+++ b/katrid/templates/bin/README
@@ -33,3 +33,5 @@ summernote: http://summernote.org/
 sweetalert: http://t4t5.github.io/sweetalert/
 toastr: https://github.com/CodeSeven/toastr
 x-editable: https://vitalets.github.io/x-editable/
+UiFaces: http://www.uifaces.com/
+UnSplash: https://unsplash.com/
